# youtube-transcript-exporter

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_CLEANUP_REPORT.md  AUDIT_COMPLETE.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_AUDIT_TOOL.py  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  CONVENTIONS.md  DOCUMENTATION_COMPLETION_REPORT.md  DOWNLOAD_STATUS.md  Dockerfile  FIX_PLAN.md  INSTALL.md  KNOWLEDGE_AUDIT.md  LICENSE  MARKDOWN_REGENERATION_REPORT.md  NAMING_CONVENTION.md  OPTIMIZATION_LOG.md  PRODUCTION_READINESS.md  PROMPTING_GUIDE.md  QUICKSTART.md  RAG_SCHEMA_REPORT.md  README.md  READY_TO_USE.md  SECURITY.md  TROUBLESHOOTING.md  auto_enhance_angels.sh  auto_enhance_asha.sh  auto_enhance_elizabeth.sh  auto_enhance_hds.sh  batch_5channels.sh  batch_5new_channels.sh  batch_asha_aggressive.sh  batch_redownload_all.sh  batch_redownload_parallel.sh  (+15 more)
db/: downloaded.txt
docs/: RAG_AND_OBSIDIAN.md  example_canonical.json  example_output.md
examples/: README.md
logs/: ytx.jsonl
src/: download_resilient.py  enhance_markdown_rag.py  enhance_rag_schema.py  markdown_generator.py  metadata_extractor.py  notion_exporter.py  obsidian_formatter.py
tests/: build_fixture.sh  smoke_test.sh  test_all.py
tools/: cleanup_data.py  count_channels.py  merge_channels.py  normalize_out_layout.py  seed_download_archive.py  system_health_check.py  validate_alignment.py
ytexporter/: __init__.py  __main__.py
ytx/: __init__.py  __main__.py  audit.py  config.py  doctor.py  downloader.py  fix.py  log.py  obsidian.py  report.py  (+2 more)
(+10 files in other folders)
